--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -23,7 +23,7 @@ apisix:
   node_listen: 9080              # APISIX listening port
   enable_admin: true
   enable_admin_cors: true         # Admin API support CORS response headers.
-  enable_debug: false
+  enable_debug: true
   enable_dev_mode: false          # Sets nginx worker_processes to 1 if set to true
   enable_reuseport: true          # Enable nginx SO_REUSEPORT switch if set to true.
   enable_ipv6: true
