--- a/conf/nginx_comment.conf
+++ b/conf/nginx_comment.conf
@@ -133,7 +133,9 @@ http {
 
     # master进程初始化时执行
     init_by_lua_block {
+        # 加载/usr/local/Cellar/openresty/1.17.8.2_1/lualib/resty/core.lua，该文件会加载其他OpenResty的核心lua文件
         require "resty.core"
+        # 加载apisix/init.lua（lua_package_path配置中有一条/Users/donghaifeng/PyCharmProjects/apisix/?/init.lua）
         apisix = require("apisix")
 
         local dns_resolver = { "198.18.0.2", }
@@ -203,7 +205,11 @@ http {
         }
 
         location / {
-            # 设置若干变量
+            # 初始化若干变量
+            # Nginx变量的创建只能发生在Nginx配置加载的时候，或者说Nginx启动的时候；而赋值操作则只会发生在请求实际处理的时候。这意味着
+            # 不创建而直接使用变量会导致启动失败，同时也意味着无法在请求处理时动态地创建新的Nginx变量。
+            # 另外Nginx的变量可见范围是整个配置，即无论在哪个location声明了变量，该变量在整个Nginx都是可见的，但每个请求都有所有变量的
+            # 独立副本，或者说都有各变量用来存放值的容器的独立副本，彼此互不干扰。
             set $upstream_mirror_host        '';
             set $upstream_scheme             'http';
             set $upstream_host               $host;
